# proyecto_final_IABD

./: .env  Readme.md  main.py  pyproject.toml
data/processed/: appointments_features.parquet
data/raw/: appointments.csv
models/: demand_model.pkl
src/proyectoiabd/: main.py
src/proyectoiabd/api/: main.py  schemas.py  services.py
src/proyectoiabd/clustering/: cluster_analysis.py  dbscan_clustering.py
src/proyectoiabd/config/: settings.py
src/proyectoiabd/data_sources/: appointments_loader.py  emissions_api.py  generate_mock_data.py  geolocation_api.py  streaming_simulator.py
src/proyectoiabd/demand/: demand_model.py  demand_predictor.py
src/proyectoiabd/features/: feature_engineering.py  geo_features.py
src/proyectoiabd/ingestion/: batch_ingestion.py  data_cleaning.py  streaming_ingestion.py
src/proyectoiabd/pipelines/: appointments_pipeline.py
src/proyectoiabd/pricing/: green_score.py  pricing_engine.py
src/proyectoiabd/routing/: distance_matrix.py  route_analysis.py  vrp_solver.py
src/proyectoiabd/utils/: spark_session.py
src/proyectoiabd/visualization/: streamlit_app.py
